# Paper-Trail

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: config.py  dedupe.py  gmail_client.py  main.py  models.py  parser.py  sheets.py
config/: config.yaml.example
scripts/: run.sh
